1)customize tooltip for available space 2)solved the bug of updating values for reception and lounge in input field 3)solved layout page overflow on mobile

--- a/src/styles/Landing.css
+++ b/src/styles/Landing.css
@@ -194,6 +194,6 @@ slick-current {
   }
 }
 
-/* .apexcharts-datalabel {
-  font-size: 60%;
-} */
+.apexcharts-datalabel {
+  font-size: 45%;
+}
